--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="name">Name</string>
     <string name="confirm">Confirm</string>
     <string name="register">Register</string>
+    <string name="registration_completed_successfully">Registration completed successfully!</string>
 </resources>
