--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="confirm">Confirm</string>
     <string name="register">Register</string>
     <string name="registration_completed_successfully">Registration completed successfully!</string>
+    <string name="message">Message</string>
+    <string name="ok">Ok</string>
 </resources>
