predict and ranking ui completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,13 @@
     <string name="score">Score</string>
     <string name="_23">23</string>
     <string name="rank">Rank</string>
+    <string name="_5221">5221</string>
+    <string name="_4870">4870</string>
+    <string name="_3580">3580</string>
+    <string name="_4">4</string>
+    <string name="end">End</string>
+    <string name="manchester">Manchester</string>
+    <string name="_7">+7</string>
+    <string name="_2500">2500</string>
 
 </resources>
