--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,9 @@
     <string name="warning">Warning!</string>
     <string name="please_enter_username">Please Enter Username.</string>
     <string name="done">Done</string>
+    <string name="_1">1</string>
+    <string name="_2">2</string>
+    <string name="_3">3</string>
+
 
 </resources>
